# welding-company

./: CMakeLists.txt  README.md  common.h  sample_tester.cpp  sample_tester.h
include/: CWeldingCompany.h
src/: CWeldingCompany.cpp  main.cpp
tests/: test_welding.cpp
